update url stream

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,134 @@
-Babel==2.12.1
-matplotlib==3.7.2
-pandas==2.0.3
-seaborn==0.12.2
-streamlit==1.25.0
+adbc_driver_manager==1.7.0
+adbc_driver_postgresql==1.7.0
+adbc_driver_sqlite==1.7.0
+anywidget==0.9.18
+AppKit==0.2.8
+atheris==2.3.0
+authlib==1.6.3
+beautifulsoup4==4.13.5
+bokeh==3.8.0
+boto3==1.40.25
+botocore==1.40.25
+brotli==1.1.0
+brotlicffi==1.1.0.0
+cairocffi==1.7.1
+Carbon==1.1.10
+chardet==5.2.0
+checks==0.2
+colorama==0.4.6
+ConfigParser==7.2.0
+cryptography==45.0.7
+cudf==0.6.1.post1
+cupy==13.6.0
+Cython==3.1.3
+dask==2025.7.0
+dask_expr==2.0.0
+defcon==0.12.2
+defusedxml==0.7.1
+docutils==0.22
+duckdb==1.3.2
+fastcluster==1.3.0
+fastparquet==2024.11.0
+filelock==3.19.1
+Foundation==0.1.0a0.dev1
+fqdn==1.5.1
+freetype_py==2.5.1
+fsspec==2025.9.0
+gitdb_speedups==0.1.0
+glyphsLib==6.11.6
+graphviz==0.21
+h2==4.3.0
+HTMLParser==0.0.2
+huggingface_hub==0.34.4
+hypothesis==6.138.14
+ibis==3.3.0
+importlib_resources==6.5.2
+ipykernel==6.30.1
+ipython==9.5.0
+ipywidgets==8.1.7
+isoduration==20.11.0
+jnius==1.1.0
+JPype1==1.6.0
+jsonpath_ng==1.7.0
+jsonpointer==3.0.0
+keyring==25.6.0
+lxml==6.0.1
+lz4==4.4.4
+modin==0.35.0
+mtrand==0.1
+munkres==1.1.4
+mypy==1.17.1
+numexpr==2.11.0
+odfpy==1.4.1
+olefile==0.47
+openpyxl==3.1.5
+plotly==6.3.0
+polars==1.33.0
+psutil==7.0.0
+py==1.11.0
+pycares==4.10.0
+pycurl==7.45.6
+PyInstaller==6.15.0
+pyodide==0.0.2
+pyOpenSSL==25.1.0
+pyperf==2.9.0
+PyQt4==4.11.4
+PyQt5==5.15.11
+PyQt6==6.9.1
+PySide2==5.15.2.1
+PySide6==6.9.2
+pyspark==4.0.1
+pytest==8.4.2
+python_calamine==0.5.2
+pyxlsb==1.0.10
+PyYAML==6.0.2
+qtpy==2.4.3
+Quartz==0.0.1.dev0
+railroad==0.5.0
+redis==6.4.0
+reportlab==4.4.3
+Res==0.1.7
+rfc3339_validator==0.1.4
+rfc3986_validator==0.1.1
+rfc3987==1.3.8
+rfc3987_syntax==1.1.0
+s3fs==2025.9.0
+scikit_learn==1.7.1
+scipy==1.16.1
+scipy_doctest==2.0.1
+selenium==4.35.0
+sets==0.3.2
+setuptools==80.9.0
+setuptools_scm==9.2.0
+shiboken2==5.15.2.1
+shiboken6==6.9.2
+simplejson==3.20.1
+sip==6.12.0
+sniffio==1.3.1
+snowflake==1.7.0
+Sphinx==8.2.3
+sphinx_gallery==0.19.0
+SQLAlchemy==2.0.43
+sqlframe==3.39.4
+statsmodels==0.14.5
+streamlit_pdf==1.0.7
+sympy==1.14.0
+thread==2.0.5
+threadpoolctl==3.6.0
+traitlets==5.14.3
+trio==0.30.0
+ufoLib2==0.18.1
+uharfbuzz==0.51.4
+unicodedata2==16.0.0
+uri_template==1.3.0
+urllib3_secure_extra==0.1.0
+vegafusion==2.0.2
+watchdog==6.0.0
+webcolors==24.11.1
+xarray==2025.9.0
+xattr==1.2.0
+xlrd==2.0.2
+xlsxwriter==3.2.5
+xmlrpclib==1.0.1
+zopfli==0.2.3.post1
+zstandard==0.24.0
